Refactor tests: improve structure and remove unnecessary exceptions